tests/language_modules/11_errors_results/valid/result_ok_return.vf
module ResultOkReturn

error NotFound

function load() returns Result<Integer, NotFound>
is
    return ok 1
end load

end ResultOkReturn