tests/language_modules/11_errors_results/invalid_semantics/result_ok_type_mismatch.vf
module ResultOkTypeMismatch

error NotFound

function load() returns Result<Integer, NotFound>
is
    return ok true
end load

end ResultOkTypeMismatch